# libpocsag

./: .gitignore  Makefile.am  README.md  configure.ac  libpocsag.pc.in
.github/workflows/: ci.yml  release.yml
debian/: autoreconf.after  autoreconf.before  changelog  control  debhelper-build-stamp  files  libpocsag-dev.install  libpocsag0.install  rules
debian/.debhelper/libpocsag0/: dbgsym-build-ids
debian/.debhelper/libpocsag0/dbgsym-root/DEBIAN/: control  md5sums
debian/.debhelper/libpocsag0/dbgsym-root/usr/share/doc/: libpocsag0-dbgsym
debian/libpocsag-dev/DEBIAN/: control  md5sums
debian/libpocsag-dev/usr/include/libpocsag/: decoder.h  encoder.h  pocsag.h
debian/libpocsag-dev/usr/share/doc/libpocsag-dev/: copyright
debian/libpocsag0/DEBIAN/: control  md5sums  shlibs
debian/tmp/usr/include/libpocsag/: version.h
examples/: Makefile.am  decode_stream.c  encode_page.c  gen_baseband.c  gen_wav.c  level_sweep.sh  modem_demo.c  pocsag_sdr.c  pocsag_tx.c
include/: Makefile.am
include/libpocsag/: bch.h  demodulator.h  error.h  modulator.h  pocsag.h  types.h  version.h
src/: Makefile.am  alpha.c  bch.c  codeword.c  decoder.c  demodulator.c  encoder.c  error.c  modulator.c  numeric.c  pocsag_internal.h
tests/: Makefile.am  test.h  test_alpha.c  test_bch.c  test_codeword.c  test_decoder.c  test_demodulator.c  test_encoder.c  test_main.c  test_modulator.c  test_numeric.c  test_roundtrip.c
